--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,15 @@
-name: Build and Push Docker Images
+name: Build and Push Web + DB Images
 
 on:
   push:
-    branches: [ master ]  # oder 'main', je nach deinem Branch
+    branches: [ master ]  # oder "main" je nach deinem Repo
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout source code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
     - name: Log in to GitHub Container Registry
       uses: docker/login-action@v2
@@ -24,3 +23,7 @@ jobs:
         docker build -t ghcr.io/kjeel/assignment03-web:latest ./web
         docker push ghcr.io/kjeel/assignment03-web:latest
 
+    - name: Build and push DB image
+      run: |
+        docker build -t ghcr.io/kjeel/assignment03-db:latest ./db
+        docker push ghcr.io/kjeel/assignment03-db:latest
